<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/textViewBG"
    tools:context=".MainActivity2" >



    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="130dp"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/gradient2"
        android:orientation="vertical"
        android:textAlignment="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/dark"
            android:fontFamily="sans-serif-medium"
            android:paddingStart="12dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/c1_map"
            android:textAlignment="gravity"
            android:textColor="@color/paleBlueBG"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/CurrText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:width="120dp"
            android:background="@color/blue"
            android:includeFontPadding="true"
            android:paddingStart="16dp"
            android:paddingTop="5dp"
            android:paddingEnd="2.5dp"
            android:paddingBottom="2.5dp"
            android:text="@string/current"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/NextText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/red"
            android:includeFontPadding="true"
            android:paddingStart="16dp"
            android:paddingTop="2.5dp"
            android:paddingEnd="2.5dp"
            android:paddingBottom="5dp"
            android:text="@string/next"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />


        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/toggleSwitch"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@color/banner"
            android:checked="false"
            android:onClick="toggleLabels"
            android:paddingStart="8dp"
            android:text="@string/toggle_switch_text"
            android:textColor="@color/medGrey"
            android:textSize="14sp"
            android:textStyle="bold"
            app:thumbTint="@color/dullTeal" />

        <Button
            android:id="@+id/showPathButton"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="4dp"
            android:backgroundTint="@color/butt"
            android:onClick="showButton"
            android:paddingHorizontal="-2dp"
            android:text="@string/show_path"
            android:textSize="14sp"
            android:textStyle="bold" />



        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="40dp"
            android:backgroundTint="@color/banner"
            android:onClick="goBack"
            android:text="@string/return_btnText"
            android:textColor="@color/paleAqua"
            android:textSize="14sp"
            android:textStyle="bold" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView_c1Map"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"

        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@id/linearLayout"
        android:background="@drawable/c1map" />

    <ImageView
        android:id="@+id/imageView_RoomLabels"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/imageView_c1Map"
        android:layout_alignTop="@+id/imageView_c1Map"
        android:importantForAccessibility="no"
        app:srcCompat="@drawable/c1_labels"
        tools:visibility="invisible" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/imageView_RoomLabels"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="11dp"
        android:layout_marginBottom="12dp"
        android:backgroundTint="#05193E5B"
        android:gravity="bottom|center_horizontal|end"
        android:onClick="testPoints"
        android:text="@string/test"
        android:textColor="#0DFFFFFF"
        android:textSize="20sp"
        android:visibility="visible" />

</RelativeLayout>
