<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/paleBlueBG"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textInstructions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/textViewBG"
        android:elegantTextHeight="true"
        android:paddingStart="32dp"
        android:paddingTop="18dp"
        android:paddingEnd="16dp"
        android:paddingBottom="18dp"
        android:text="@string/instruction_activity_main"
        android:textColor="@color/paleAqua"
        android:textSize="8pt"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/currentInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/current_room_textInput_hintText"

        android:textColorHint="@color/ultraviolet"
        app:boxStrokeColor="@color/Turquoise"
        app:boxBackgroundColor="@color/lightGrey"
        app:counterEnabled="true"
        app:counterMaxLength="3"
        app:errorEnabled="true"
        app:helperTextTextColor="@color/red"
        app:boxStrokeErrorColor="@color/red"
        app:hintTextAppearance="@style/TextAppearance.AppCompat.Medium"
        app:hintTextColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:prefixText="C1-"
        app:prefixTextColor="@color/ultraviolet"
        app:counterTextColor="@color/ultraviolet"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="3" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nextInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/next_room_InputText_hintText"
        app:boxBackgroundColor="@color/lightGrey"
        android:textColorHint="@color/ultraviolet"
        app:hintTextColor="@color/dark"
        app:boxStrokeColor="@color/Turquoise"
        app:boxStrokeErrorColor="@color/red"
        app:hintTextAppearance="@style/TextAppearance.AppCompat.Medium"
        app:counterEnabled="true"
        app:counterMaxLength="3"
        app:errorEnabled="true"
        app:helperTextTextColor="@color/red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:prefixText="C1-"
        app:prefixTextColor="@color/ultraviolet"
        app:counterTextColor="@color/ultraviolet"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="3"
            app:counterEnabled="true"
            app:counterMaxLength="3" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/confirmButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/dullTeal"
        android:text="@string/confirm_btn_text"
        tools:ignore="TextContrastCheck" />

    <ImageView
        android:id="@+id/backgroundGradient"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/gradient2"
         />

</LinearLayout>




